--- a/src/compontents/footer/footer.css
+++ b/src/compontents/footer/footer.css
@@ -1,6 +1,4 @@
 footer {
-  margin-top: 7rem;
-
   font-size: 0.9rem;
   display: flex;
   flex-direction: column;
