--- a/src/compontents/header/header.css
+++ b/src/compontents/header/header.css
@@ -2,7 +2,6 @@ header {
   height: 100vh;
   padding-top: 3rem;
   /* overflow: hidden; */
-  margin-bottom: 4rem;
 }
 
 .header__container {
